fixed header overlap and margin

--- a/src/css/global.header-nav.css
+++ b/src/css/global.header-nav.css
@@ -14,6 +14,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    margin: 0 20px;
     .header-nav__left {
       display: flex;
       align-items: center;
